--- a/application/samples/products/Kconfig
+++ b/application/samples/products/Kconfig
@@ -9,6 +9,7 @@ config ENABLE_ALL_PRODUCTS_SAMPLE
     depends on ENABLE_PRODUCTS_SAMPLE
     select SAMPLE_SUPPORT_BLE_UART
     select SAMPLE_SUPPORT_SLE_UART
+    select SAMPLE_SUPPORT_SLE_UART_1_VS_8
     select SAMPLE_SUPPORT_SLE_GETAWAY
     help
         This option means enable all the sample of product, it is just for build.
@@ -42,6 +43,20 @@ config SAMPLE_SUPPORT_SLE_UART
 if SAMPLE_SUPPORT_SLE_UART
 menu "SLE UART Sample Configuration"
     osource "application/samples/products/sle_uart/Kconfig"
+endmenu
+endif
+
+config SAMPLE_SUPPORT_SLE_UART_1_VS_8
+    bool
+    prompt "Support SLE UART 1 vs 8 sample."
+    default n
+    depends on ENABLE_PRODUCTS_SAMPLE
+    help
+        This option means support SLE UART  1 vs 8  Sample.
+
+if SAMPLE_SUPPORT_SLE_UART_1_VS_8
+menu "SLE UART  1 vs 8  Sample Configuration"
+    osource "application/samples/products/sle_uart_1_vs_8/Kconfig"
 endmenu
 endif
 
